# md_directory_builder

./: .gitignore  pyproject.toml
app/: build_mailing_lists.py  build_md_directory.py  db_handler.py  db_handler_test.py  db_settings.ini  extract_club_officers_from_mylci_csv.py  filter_and_build.py  get_website_outputs_de.py  get_website_outputs_md.py  no_frills_latex.txt  set_club_officers.py  set_club_website.py  set_club_zone.py  utilities.py
