[tool.poetry]
name = "md_directory_builder"
version = "0.1.0"
description = "build an md directory, probably pulling data from MySQL"
authors = ["Kim van Wyk <vanwykk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
attr = "^0.3.1"
SQLAlchemy = "^1.3"
pandoc-latex-unlisted = "^0.2.0"
docker = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
autopep8 = "^1.4"
chardet = "^3.0"
mysqlclient = "^1.4"
clipboard = "^0.0.4"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ptpython = {version = "^2.0",allows-prereleases = true}
flake8 = {version = "^3.7",allows-prereleases = true}
profilehooks = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
