[tool.poetry]
name = "md-directory-builder"
version = "0.1.0"
description = "build an md directory, probably pulling data from MySQL"
authors = ["Kim van Wyk <vanwykk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "1.4"
pandoc-latex-unlisted = "^0.2.0"
docker = "^6.0.1"
chardet = "^5.1.0"
mysqlclient = "^2.1.1"
clipboard = "^0.0.4"
pyperclip = "^1.8.2"
attrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
autopep8 = "^2.0.2"
mypy = "^1.1.1"
ptpython = "^3.0.23"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
